btrbk-0.27.0-dev

  * MIGRATION
    - update ssh_filter_btrbk.sh on remote hosts (btrbk always calls
      "readlink" and "cat /proc/self/mounts").
  * Add "preserve_hour_of_day" configuration option (close #202).
  * Allow backup of filesystem root using "subvolume ." (close #240).
  * Bugfix: correct scheduling of "first weekly backup in month/year"
    (close #217). Note that this change may result in (previously
    preserved) backups to be deleted!
  * Bugfix: add "btrfs filesystem usage" backend mapping (close #222).
  * Bugfix: do not fail (exitcode=10) if targets are not accessible on
    "btrfs snapshot --preserve".
  * Enhance internal data structures:
    - Allow snapshot_dir to be a mountpoint.
    - Search complete target tree for correlated subvolumes.
    - Include snapshots from all mountpoints as candidates (disabled
      due to uptream bug: github.com/kdave/btrfs-progs/issues/96).
    - Always read /proc/self/mounts.
    - Resolve realpath using readlink(1).
  * Fallback to "asciidoctor" for manpage generation (close #219).

btrbk-0.26.1

  * Add "archive_exclude" configuration option.
  * Add warning on redefined configuration option.
  * Bugfix: fix parsing of "openssl_iv_size" configuration option.
  * Bugfix: fix filter statement matching for volume=/ (close #209).

btrbk-0.26.0

  * MIGRATION
    - If you are using raw targets, make sure to run the
      "raw_suffix2sidecar" utility in each target directory.
  * Support for btrfs-progs v4.13.2: adapt parsing of "btrfs sub list"
    output (close #192).
  * Add "resume" command, replacement for "-r, --resume-only" command
    line option (which is now deprecated).
  * Add "snapshot" command (close #150).
  * Add "prune" command.
  * Add "--preserve-snapshots" and "--preserve-backups" options.
  * Add "--wipe" command line option (close #173).
  * Change raw backup format (sidecar file instead of uuid in file).
  * Honor target_preserve for raw targets (delete raw targets).